# django-rye-unicorn

./: .gitignore  README.md  pyproject.toml
mysite/: settings.py  urls.py
src/django_rye/: __init__.py
todos/: views.py
todos/templates/todos/: index.html
unicorn/components/: todo.py
unicorn/templates/unicorn/: todo.html
